tests/Rules/Ui/Fixtures/valid/outline_none_with_focus_visible.html.twig
<button class="btn focus-visible" style="outline:none">Valid button</button>
