tests/Rules/Ui/Fixtures/invalid/button_small_inline.html.twig
{# 1 errors #}
<button style="width:12px; height:12px">X</button>
